Update README with comprehensive game overview and project details
Co-authored-by: ali.tharwat <ali.tharwat@student.giu-uni.de>